fix cors and create api publisher
