# routes/api.php
@@ -2,7 +2,7 @@
 
 use App\Http\Controllers\Api\EpisodeController;
 use App\Http\Controllers\Api\PodcastController;
-use App\Http\Controllers\EpisodeUploadController;
+use App\Http\Controllers\Api\PublisherController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -15,10 +15,14 @@ Route::get('podcasts', [PodcastController::class, 'index']);
 Route::get('podcasts/{podcast}', [PodcastController::class, 'show']);
 Route::post('podcasts', [PodcastController::class, 'store']);
 Route::put('podcasts/{podcast}', [PodcastController::class, 'update']);
-Route::patch('podcasts/{podcast}', [PodcastController::class, 'update']);
 Route::delete('podcasts/{podcast}', [PodcastController::class, 'destroy']);
 
-Route::get('episodes',[EpisodeController::class, 'index']);
-Route::post('episodes',[EpisodeController::class, 'store']);
+Route::get('episodes', [EpisodeController::class, 'index']);
+Route::post('episodes', [EpisodeController::class, 'store']);
 // Route::post('/episodes/presign-audio', [EpisodeUploadController::class, 'generatePresignedUrl']);
 
+Route::get('publishers', [PublisherController::class, 'index']);
+Route::get('publishers/{publisher}', [PublisherController::class, 'show']);
+Route::post('publishers', [PublisherController::class, 'store']);
+Route::put('publishers/{publisher}', [PublisherController::class, 'update']);
+Route::delete('publishers/{publisher}', [PublisherController::class, 'destroy']);
